# pparser

./: .gitignore  CLI_USAGE_GUIDE.md  README.md  TESTING.md  USAGE.md  demo.py  final_validation.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_complete_system.py  test_end_to_end.py  validate.py
examples/: README.md  basic_processing.py  batch_processing.py  custom_workflow.py  ref_usage.py
examples/test_data/output/: test_document.md  test_document_enhanced.md  test_document_improved.md  test_document_metadata.json  test_document_quality_report.json
output/tables/: page_1_table_1.csv  page_3_table_2.csv  page_5_table_1.csv  page_5_table_2.csv  page_5_table_3.csv
pparser/: __init__.py  __main__.py  cli.py  config.py  enhanced_cli.py
pparser/agents/: __init__.py  base.py  config_manager.py  content_utils.py  enhanced_batch_processor.py  enhanced_processor.py  error_handling.py  factory.py  form_agent.py  formula_agent.py  image_agent.py  memory_system.py  mixins.py  quality_agent.py  structure_agent.py  table_agent.py  text_agent.py
pparser/extractors/: __init__.py  base.py  form.py  formula.py  image.py  table.py  text.py
pparser/processors/: __init__.py  batch_processor.py  pdf_processor.py
pparser/utils/: __init__.py  helpers.py  logger.py
pparser/workflows/: __init__.py  batch_workflow.py  pdf_workflow.py
tests/: __init__.py  conftest.py  test_agents.py  test_base_classes.py  test_cli.py  test_config.py  test_extractors.py  test_integration.py  test_performance.py  test_utils.py  test_workflows.py
